# AuraOs

./: .gitignore  .openapi-generator-ignore  BUILDSRC_ANALYSIS.md  BUILDSRC_FIX.md  DATAVEIN_IMPLEMENTATION_SUMMARY.md  FINAL_ENHANCEMENTS.md  README.md  XPOSED_INTEGRATION.md  build.gradle.kts  generate-genesis-api.bat  generate-genesis-api.sh  generate-openapi.ps1  gradle.properties  local.properties  openapi-config.yaml  openapi-generator-config.json  openapi-generator.gradle.kts  set_java_home.ps1  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: gradle.yml  main.yml
app/: build.gradle.kts
app/src/main/java/dev/aurakai/auraframefx/: AuraFrameApplication.kt  MainActivity.kt
app/src/main/java/dev/aurakai/auraframefx/ui/screens/: FusionModeScreen.kt
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
buildSrc/: build.gradle.kts  module.md
buildSrc/src/main/kotlin/: AndroidAppConventionPlugin.kt  GenesisDependencies.kt  GenesisVersions.kt  android-application-conventions.gradle.kts  android-library-conventions.gradle.kts  detekt-conventions.gradle.kts  openapi-generation-conventions.gradle.kts  room-database-convention.gradle.kts  spotless-conventions.gradle.kts
buildSrc/src/main/kotlin/plugins/: AndroidAppConventionPlugin.kt  AndroidLibraryConventionPlugin.kt  CollaborationCanvasConventionPlugin.kt  ComposeConventionPlugin.kt  DocumentationConventionPlugin.kt  GenesisProtocolPlugin.kt  JvmTestConventionPlugin.kt  OpenApiConventionPlugin.kt  OracleDriveConventionPlugin.kt  SandboxUIConventionPlugin.kt  SecureCommunicationConventionPlugin.kt  android-app-convention.gradle.kts  documentation-convention.gradle.kts  openapi-convention.gradle.kts
collab-canvas/: build.gradle.kts
colorblendr/: build.gradle.kts
core-module/: build.gradle.kts
datavein-oracle-drive/: build.gradle.kts
datavein-oracle-drive/src/main/cpp/: CMakeLists.txt
datavein-oracle-native/: build.gradle.kts  build.gradle.kts.backup  build.gradle.kts.simple
feature-module/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
jvm-test/: build.gradle.kts
module-a/: build.gradle.kts
module-c/: build.gradle.kts
module-d/: build.gradle.kts
module-e/: build.gradle.kts
module-f/: build.gradle.kts
oracle-drive-integration/: build.gradle.kts
romtools/: build.gradle.kts
sandbox-ui/: build.gradle.kts
secure-comm/: build.gradle.kts
(+3 files in other folders)
